Fix item source watermark overlapping rarity border

--- a/style/component/inventory/Item.scss
+++ b/style/component/inventory/Item.scss
@@ -54,6 +54,7 @@
 	}
 	
 	&-source-watermark {
+		inset: 1px;
 		background-image: var(--watermark);
 	}
 	
